--- a/idgs9A/Musica/templates/Musica/contact.html
+++ b/idgs9A/Musica/templates/Musica/contact.html
@@ -14,37 +14,32 @@
     {% endblock %}
 <section id="redes">
     <div class="tarjeta">
-        
         <img src="https://1000marcas.net/wp-content/uploads/2019/11/Twitter-logo-640x520.png" alt="">
-        <h2>Twitter</h2>
+        <a href='https://twitter.com/' target="_blank"><h2>Twitter</h2></a>
     </div>
     <div class="tarjeta">
-        
         <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="">
-        <h2>Facebook</h2>
+        <a href='https://facebook.com/' target="_blank"><h2>Facebook</h2></a>
     </div>
     <div class="tarjeta">
-        
-        <img src="https://global-uploads.webflow.com/5f5a53e153805db840dae2db/6073fbf151fa4565d48572dc_GitHub_aprender-programaci%25C3%25B3n.jpeg" alt="">
-        <h2>GitHub</h2>
+        <img src="https://1000marcas.net/wp-content/uploads/2019/11/Instagram-logo-768x768.png" alt="">
+        <a href='https://instagram.com/' target="_blank"><h2>Instagram</h2></a>
     </div>
 </section>
 <section id="redes">
     <div class="tarjeta">
-        
+        <img src="https://global-uploads.webflow.com/5f5a53e153805db840dae2db/6073fbf151fa4565d48572dc_GitHub_aprender-programaci%25C3%25B3n.jpeg" alt="">
+        <a href='https://github.com/' target="_blank"><h2>GitHub</h2></a>
+    </div>
+    <div class="tarjeta">
         <img src="https://1000marcas.net/wp-content/uploads/2019/11/logo-Gmail-1.png" alt="">
-        <h2>Gmail</h2>
+        <a href='https://gmail.com/' target="_blank"><h2>Gmail</h2></a>
     </div>
     <div class="tarjeta">
-        
         <img src="https://1000marcas.net/wp-content/uploads/2020/02/YouTube-logo-768x432.png" alt="">
-        <h2>YouTube</h2>
+        <a href='https://youtube.com/' target="_blank"><h2>YouTube</h2></a>
     </div>
-    <div class="tarjeta">
-        
-        <img src="https://1000marcas.net/wp-content/uploads/2019/11/Instagram-logo-768x768.png" alt="">
-        <h2>Instagram</h2>
-    </div>
+    
 </section>
 {% endblock %}
 {% block footer%} {% endblock%}
