--- a/idgs9A/videogames/templates/videogames/basehome.html
+++ b/idgs9A/videogames/templates/videogames/basehome.html
@@ -32,10 +32,10 @@
         <div class="navExpand p-4">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link navLink" aria-current="page" href="{% url 'index' %}">Inicio</a>
+                    <a class="nav-link navLink" aria-current="page" href="{% url 'index_videogames' %}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link navLink" href="{% url 'about' %}">Acerca de</a>
+                    <a class="nav-link navLink" href="{% url 'about_videogames' %}">Acerca de</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link navLink" href="{% url 'games' %}">Todos los juegos</a>
@@ -48,7 +48,7 @@
             <button class="navbar-toggler navButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}">
+            <a class="navbar-brand" href="{% url 'index_videogames' %}">
                 <img src="media/videogames_logos/galaxy_logo.png" width="30" height="30" class="d-inline-block align-top logo" alt="">
             </a>
         </div>
